[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/characters/base_char.gd" type="Script" id=1]
[ext_resource path="res://src/characters/base_stats.gd" type="Script" id=2]
[ext_resource path="res://src/characters/base_control.gd" type="Script" id=3]
[ext_resource path="res://src/characters/crosshair.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/etc/crosshair.png" type="Texture" id=5]
[ext_resource path="res://src/characters/base_hurtbox.gd" type="Script" id=6]
[ext_resource path="res://src/characters/hands.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/harpy/shadow.png" type="Texture" id=8]

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "idle_left_down"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "idle_right_down"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle_right_up"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "idle_left_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( -0.6, 0.7 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0.6, 0.7 )
blend_point_4/node = SubResource( 26 )
blend_point_4/pos = Vector2( 1, 0 )
blend_point_5/node = SubResource( 27 )
blend_point_5/pos = Vector2( 0.6, -0.7 )
blend_point_6/node = SubResource( 28 )
blend_point_6/pos = Vector2( 0, -1.1 )
blend_point_7/node = SubResource( 29 )
blend_point_7/pos = Vector2( -0.6, -0.7 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "run_left_down"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "run_left_down"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "run_right_down"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "run_right_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run_right_up"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run_left_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 31 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 32 )
blend_point_1/pos = Vector2( -0.6, 0.7 )
blend_point_2/node = SubResource( 33 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0.6, 0.7 )
blend_point_4/node = SubResource( 14 )
blend_point_4/pos = Vector2( 1, 0 )
blend_point_5/node = SubResource( 15 )
blend_point_5/pos = Vector2( 0.6, -0.7 )
blend_point_6/node = SubResource( 16 )
blend_point_6/pos = Vector2( 0, -1.1 )
blend_point_7/node = SubResource( 17 )
blend_point_7/pos = Vector2( -0.6, -0.7 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/orc_melee_idles/node = SubResource( 30 )
states/orc_melee_idles/position = Vector2( 490, 194 )
states/orc_melee_run/node = SubResource( 18 )
states/orc_melee_run/position = Vector2( 767, 194 )
transitions = [ "orc_melee_idles", "orc_melee_run", SubResource( 19 ), "orc_melee_run", "orc_melee_idles", SubResource( 20 ) ]
start_node = "orc_melee_idles"

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[node name="base_char" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 34 )
parameters/orc_melee_idles/blend_position = Vector2( 0, 0 )
parameters/orc_melee_run/blend_position = Vector2( 0, 0 )

[node name="AttackPlayer" type="AnimationPlayer" parent="."]

[node name="pivot" type="Position2D" parent="."]

[node name="sprite" type="Sprite" parent="pivot"]

[node name="hands" type="Sprite" parent="pivot"]
script = ExtResource( 7 )

[node name="shadow" type="Sprite" parent="pivot"]
texture = ExtResource( 8 )

[node name="collision_box" type="CollisionShape2D" parent="."]

[node name="control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hurtbox" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]

[node name="stats" type="Node" parent="."]
script = ExtResource( 2 )

[node name="crosshair" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="crosshair"]
texture = ExtResource( 5 )
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="no_health" from="stats" to="." method="_on_stats_no_health"]
